fix/AG-3215 change scrollbar style

--- a/src/options/components/ui/Select/select.pcss
+++ b/src/options/components/ui/Select/select.pcss
@@ -46,12 +46,12 @@
         }
 
         &::-webkit-scrollbar {
-            width: 6px;
+            width: 4px;
         }
 
         &::-webkit-scrollbar-thumb {
-            border-radius: 4px;
-            background-color: rgba(0,0,0,.3);
+            border-radius: 0px;
+            background-color: var(--gray88);
         }
     }
 
